# src/routers/reset.password.router.ts
@@ -1,0 +1,7 @@
+import { Router } from "express";
+import { authController } from "../controllers/auth.controller";
+
+export const resetPasswordRouter = Router();
+
+resetPasswordRouter.post('/', authController.requestResetLink);
+resetPasswordRouter.post('/reset', authController.requestResetLink);
